# backend/openApi/swagger-spec.yaml
@@ -158,6 +158,71 @@ paths:
                 $ref: '#/components/schemas/Contacts'
       tags:
         - contact
+  /api/auth/signup:
+    post:
+      operationId: signup
+      summary: ''
+      description: サインアップする
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthSignUpRequest'
+      responses:
+        '200':
+          description: サインアップ結果
+          content:
+            application/json:
+              schema:
+                type: string
+      tags: &ref_2
+        - auth
+  /api/auth/login:
+    post:
+      operationId: login
+      summary: ''
+      description: ログインする
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthLoginRequest'
+      responses:
+        '200':
+          description: JWTトークン
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/LoginAuthGuard'
+      tags: *ref_2
+  /api/auth/active:
+    post:
+      operationId: active
+      summary: ''
+      description: サインイン後アドレス認証を行う
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ActiveRequest'
+      responses:
+        '200':
+          description: ユーザ情報
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Users'
+      tags: *ref_2
 info:
   title: Cats example
   description: The cats API description
@@ -488,3 +553,15 @@ components:
           example: お問い合わせの内容をここに記入してください。
       required:
         - message
+    AuthSignUpRequest:
+      type: object
+      properties: {}
+    AuthLoginRequest:
+      type: object
+      properties: {}
+    LoginAuthGuard:
+      type: object
+      properties: {}
+    ActiveRequest:
+      type: object
+      properties: {}
